<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/user_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/email"
                style="@style/TextHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="andreirafikovv" />

            <TextView
                android:id="@+id/user_id"
                style="@style/TextD"
                android:layout_marginTop="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email"
                tools:text="andreirafikovv@yandex.ru" />

            <androidx.cardview.widget.CardView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:elevation="@dimen/margin_12"
                app:cardCornerRadius="35dp"
                android:layout_marginTop="@dimen/margin_24"
                android:layout_marginEnd="@dimen/margin_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:cardBackgroundColor="@color/secondaryDarkColor"
                android:background="@color/white"
                android:layout_centerHorizontal="true">
                <ImageView
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:id="@+id/profile_image"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    android:src="@drawable/user_avatar"/>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextHead"
                fontPath="fonts/bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_search_movies"
                tools:ignore="MissingPrefix" />

            <TextView
                android:id="@+id/my_films"
                style="@style/TextD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_films" />

            <TextView
                android:id="@+id/my_stars"
                style="@style/TextD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_stars" />

            <TextView
                style="@style/TextHead"
                fontPath="fonts/bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app"
                tools:ignore="MissingPrefix" />

            <TextView
                android:id="@+id/settings"
                style="@style/TextD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings" />

            <TextView
                android:id="@+id/support_service"
                style="@style/TextD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/support_service" />

            <TextView
                android:id="@+id/history"
                style="@style/TextD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history" />

            <Button
                android:id="@+id/log_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_32"
                android:layout_marginEnd="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_16"
                android:text="@string/sign_in" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>