<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/AllMargin16"
        fontPath="fonts/bold.ttf"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:text="@string/dark_theme"
        tools:ignore="MissingPrefix" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/enable_dark_theme_layout"
        style="@style/AllMargin16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            fontPath="fonts/medium.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enabled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingPrefix" />

        <ImageView
            android:visibility="invisible"
            android:id="@+id/enable_dark_theme_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical"
            android:src="@drawable/check_im"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/disable_dark_theme_layout"
        style="@style/AllMargin16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            fontPath="fonts/medium.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disabled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingPrefix" />

        <ImageView
            android:visibility="invisible"
            android:id="@+id/disable_dark_theme_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:src="@drawable/check_im"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/auto_dark_theme_layout"
        style="@style/AllMargin16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            fontPath="fonts/medium.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/automatically"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingPrefix" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/automatically_detail"
            android:textColor="@color/silver"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/auto_dark_theme_check"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageView
            android:visibility="invisible"
            android:id="@+id/auto_dark_theme_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:src="@drawable/check_im"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TextView
        fontPath="fonts/medium.ttf"
        android:id="@+id/cancel_popup_theme"
        style="@style/StartEndMargin16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32"
        android:layout_marginBottom="@dimen/margin_32"
        android:text="@string/cancel"
        tools:ignore="MissingPrefix"/>
</LinearLayout>